--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -1,12 +1,13 @@
 {
-  "app.name": "ElderCare SG",
-  "navigation.programs": "Programs",
-  "navigation.philosophy": "Our Philosophy",
-  "navigation.testimonials": "Testimonials",
-  "navigation.contact": "Contact",
-  "navigation.bookVisit": "Book Visit",
-  "hero.title": "Compassionate care, modern comfort",
-  "hero.subtitle": "Premium eldercare experiences that feel like home, crafted for Singaporean families.",
-  "hero.cta.primary": "Book a centre tour",
-  "hero.cta.secondary": "Explore our programs"
+  "app": {
+    "name": "ElderCare SG"
+  },
+  "hero": {
+    "title": "Compassionate care, modern comfort",
+    "subtitle": "Premium eldercare experiences that feel like home, crafted for Singaporean families.",
+    "cta": {
+      "primary": "Book a centre tour",
+      "secondary": "Explore our programs"
+    }
+  }
 }
