--- a/frontend/src/locales/en/forms.json
+++ b/frontend/src/locales/en/forms.json
@@ -1,10 +1,12 @@
 {
-  "form.name": "Full name",
-  "form.email": "Email",
-  "form.phone": "Phone number",
-  "form.message": "Message",
-  "form.submit": "Submit",
-  "form.reset": "Reset",
-  "form.success": "Thank you! We will reach out soon.",
-  "form.error": "Something went wrong. Please try again."
+  "form": {
+    "name": "Full name",
+    "email": "Email",
+    "phone": "Phone number",
+    "message": "Message",
+    "submit": "Submit",
+    "reset": "Reset",
+    "success": "Thank you! We will reach out soon.",
+    "error": "Something went wrong. Please try again."
+  }
 }
