--- a/frontend/src/locales/zh/navigation.json
+++ b/frontend/src/locales/zh/navigation.json
@@ -1,9 +1,13 @@
 {
-  "primary.home": "首页",
-  "primary.centers": "照护中心",
-  "primary.services": "服务项目",
-  "primary.faq": "常见问题",
-  "primary.contact": "联络我们",
-  "actions.bookVisit": "预约参观",
-  "actions.languageSwitch": "切换语言"
+  "primary": {
+    "home": "首页",
+    "centers": "照护中心",
+    "services": "服务项目",
+    "faq": "常见问题",
+    "contact": "联络我们"
+  },
+  "actions": {
+    "bookVisit": "预约参观",
+    "languageSwitch": "切换语言"
+  }
 }
