--- a/frontend/src/locales/en/navigation.json
+++ b/frontend/src/locales/en/navigation.json
@@ -1,9 +1,13 @@
 {
-  "primary.home": "Home",
-  "primary.centers": "Centres",
-  "primary.services": "Services",
-  "primary.faq": "FAQs",
-  "primary.contact": "Contact",
-  "actions.bookVisit": "Book a visit",
-  "actions.languageSwitch": "Change language"
+  "primary": {
+    "home": "Home",
+    "centers": "Centres",
+    "services": "Services",
+    "faq": "FAQs",
+    "contact": "Contact"
+  },
+  "actions": {
+    "bookVisit": "Book a visit",
+    "languageSwitch": "Change language"
+  }
 }
