--- a/frontend/src/locales/zh/common.json
+++ b/frontend/src/locales/zh/common.json
@@ -1,12 +1,13 @@
 {
-  "app.name": "ElderCare SG",
-  "navigation.programs": "服务项目",
-  "navigation.philosophy": "服务理念",
-  "navigation.testimonials": "家属分享",
-  "navigation.contact": "联络我们",
-  "navigation.bookVisit": "预约参观",
-  "hero.title": "贴心照护，现代舒适",
-  "hero.subtitle": "为新加坡家庭打造如家般安心的高品质长者日托体验。",
-  "hero.cta.primary": "预约中心参观",
-  "hero.cta.secondary": "探索我们的服务"
+  "app": {
+    "name": "ElderCare SG"
+  },
+  "hero": {
+    "title": "贴心照护，现代舒适",
+    "subtitle": "为新加坡家庭打造如家般安心的高品质长者日托体验。",
+    "cta": {
+      "primary": "预约中心参观",
+      "secondary": "探索我们的服务"
+    }
+  }
 }
