--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -7,7 +7,8 @@
     "subtitle": "Premium eldercare experiences that feel like home, crafted for Singaporean families.",
     "cta": {
       "primary": "Book a centre tour",
-      "secondary": "Explore our programs"
+      "secondary": "Explore our programs",
+      "video": "Watch tour"
     }
   }
 }
