--- a/frontend/src/locales/zh/common.json
+++ b/frontend/src/locales/zh/common.json
@@ -7,7 +7,8 @@
     "subtitle": "为新加坡家庭打造如家般安心的高品质长者日托体验。",
     "cta": {
       "primary": "预约中心参观",
-      "secondary": "探索我们的服务"
+      "secondary": "探索我们的服务",
+      "video": "观看介绍影片"
     }
   }
 }
