--- a/frontend/src/locales/ms/navigation.json
+++ b/frontend/src/locales/ms/navigation.json
@@ -1,5 +1,8 @@
 {
   "primary": {
+    "programs": "Program",
+    "philosophy": "Falsafah Kami",
+    "testimonials": "Testimoni",
     "home": "Laman Utama",
     "centers": "Pusat",
     "services": "Perkhidmatan",
