--- a/frontend/src/locales/ta/navigation.json
+++ b/frontend/src/locales/ta/navigation.json
@@ -1,5 +1,8 @@
 {
   "primary": {
+    "programs": "திட்டங்கள்",
+    "philosophy": "எங்கள் கொள்கை",
+    "testimonials": "வாடிக்கையாளர் கருத்துகள்",
     "home": "முகப்பு",
     "centers": "மையங்கள்",
     "services": "சேவைகள்",
