--- a/frontend/src/locales/zh/navigation.json
+++ b/frontend/src/locales/zh/navigation.json
@@ -1,5 +1,8 @@
 {
   "primary": {
+    "programs": "服务项目",
+    "philosophy": "服务理念",
+    "testimonials": "家属分享",
     "home": "首页",
     "centers": "照护中心",
     "services": "服务项目",
