--- a/frontend/src/locales/ta/common.json
+++ b/frontend/src/locales/ta/common.json
@@ -7,7 +7,8 @@
     "subtitle": "சிங்கப்பூர் குடும்பங்களுக்கு வீட்டுப் போல் உணரப்படும் சிறந்த முதியோர் பராமரிப்பு அனுபவங்கள்.",
     "cta": {
       "primary": "மையத்திற்கு வருகை பதிவு செய்யுங்கள்",
-      "secondary": "எங்கள் திட்டங்களை ஆராயுங்கள்"
+      "secondary": "எங்கள் திட்டங்களை ஆராயுங்கள்",
+      "video": "விழாவைப் பார்க்கவும்"
     }
   }
 }
